--- a/src/components/convinced/convinced.module.css
+++ b/src/components/convinced/convinced.module.css
@@ -3,7 +3,7 @@
   height: 450.5px;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url(../../images/con.png);
+  background-image: url(../../images/c.png);
   display: flex;
   justify-content: center;
   align-items: center;
