--- a/src/components/why-choose-us/why.module.css
+++ b/src/components/why-choose-us/why.module.css
@@ -73,3 +73,9 @@
     align-items: center;
   }
 }
+@media screen and (max-width: 520px) {
+  .header {
+    font-size: 24px;
+    margin-bottom: 48px;
+  }
+}
