--- a/src/components/why-choose-us/why.module.css
+++ b/src/components/why-choose-us/why.module.css
@@ -53,6 +53,8 @@
   justify-content: center;
   gap: 72px;
   padding-bottom: 16px;
+  margin-left: 35px;
+  margin-right: 35px;
 }
 .head {
   display: flex;
@@ -63,6 +65,7 @@
   min-height: 48px;
   min-width: 48px;
 }
+
 @media screen and (max-width: 1140px){
   .boxs {
     display: grid;
@@ -85,5 +88,8 @@
   .header {
     font-size: 24px;
     margin-bottom: 38px;
+  }
+  .brands {
+    margin-bottom: 80px;
   }
 }
