--- a/src/components/frequently/frequently.module.css
+++ b/src/components/frequently/frequently.module.css
@@ -44,7 +44,9 @@
   line-height: normal;
   letter-spacing: 0.4px;
 }
-
+.box svg {
+  transition: all ease .3s;
+}
 @media screen and (max-width: 520px) {
   .header {
     font-size: 24px;
