--- a/src/pages/contacts/contacts.module.css
+++ b/src/pages/contacts/contacts.module.css
@@ -135,7 +135,7 @@
   .data {
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
   }
   .sc {
@@ -160,5 +160,13 @@
     width: 46px;
     height: 48px;
     margin: 0;
+  }
+  .data p {
+    margin: 0;
+    font-size: 36px;
+  }
+  .data span {
+    margin: 0;
+    font-size: 14px;
   }
 }
