--- a/src/components/storelist/storelist.module.css
+++ b/src/components/storelist/storelist.module.css
@@ -1,52 +1,81 @@
 .storelist {
-    width: 100%;
-    max-width: 1216px;
-    height: 784px;
-    border-radius: 8px;
-    border: 1px solid #141414;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 48px 56px repeat(11, 48px) 56px 48px 48px;
+  width: 100%;
+  max-width: 1216px;
+  height: 784px;
+  border-radius: 8px;
+  border: 1px solid #141414;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 48px 56px repeat(11, 48px) 56px 48px 48px;
+  margin-bottom: 90px;
 }
 .storelist div {
-    border-bottom: 1px solid #C2C2C2;
-    display: grid;
-    grid-template-columns: 148px 113px 113px 167px 200px 475px;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
+  border-bottom: 1px solid #c2c2c2;
+  display: grid;
+  grid-template-columns: 148px 113px 113px 167px 200px 475px;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
 .storelist div:nth-child(2) {
-    background: #2C2C2C;
-    display: flex;
-    justify-content: center;
+  background: #2c2c2c;
+  display: flex;
+  justify-content: center;
 }
 .storelist div:nth-child(14) {
-    background: #2C2C2C;
-    display: flex;
-    justify-content: center;
+  background: #2c2c2c;
+  display: flex;
+  justify-content: center;
 }
 .storelist div:nth-child(3) {
-    background: #F2F3F4;
+  background: #f2f3f4;
 }
 .storelist div:nth-child(5) {
-    background: #F2F3F4
+  background: #f2f3f4;
 }
 .storelist div:nth-child(7) {
-    background: #F2F3F4
+  background: #f2f3f4;
 }
 .storelist div:nth-child(9) {
-    background: #F2F3F4
+  background: #f2f3f4;
 }
 .storelist div:nth-child(11) {
-    background: #F2F3F4
+  background: #f2f3f4;
 }
 .storelist div:nth-child(13) {
-    background: #F2F3F4
+  background: #f2f3f4;
 }
 .storelist div:nth-child(15) {
-    background: #F2F3F4
+  background: #f2f3f4;
 }
 .storelist div:nth-child(17) {
-    background: #F2F3F4
+  background: #f2f3f4;
+}
+@media screen and (max-width: 1250px) {
+  .storelist {
+    max-width: 350px;
+    height: 471px;
+    grid-template-rows: 28.8px 33.6px repeat(11, 28.8px) 33.6px 28.8px 28.8px;
+  }
+  .storelist div {
+    grid-template-columns: 88.8px 45px 45px 60px 111.2px;
+  }
+  .storelist div > span:nth-child(6) {
+    display: none;
+  }
+  .storelist div {
+    font-size: 10px;
+  }
+  .storelist div:nth-child(1) {
+    font-size: 8px;
+    font-weight: 600;
+  }
+  .storelist div:nth-child(16) {
+    font-size: 8px;
+    font-weight: 600;
+  }
+  .a_icon {
+    max-width: 73.05px;
+    max-height: 24px;
+  }
 }
