--- a/src/components/mobile_menu/mobile-menu.module.css
+++ b/src/components/mobile_menu/mobile-menu.module.css
@@ -24,14 +24,14 @@
   display: flex;
   justify-content: center;
 }
-ul {
+.menu ul {
   list-style: none;
   margin: 0px;
   margin-left: 0px;
   padding: 0px;
   text-align: center;
 }
-ul li {
+.menu ul li {
   color: #fff;
   height: 48px;
 }
