--- a/src/pages/place-order/place-order.module.css
+++ b/src/pages/place-order/place-order.module.css
@@ -430,4 +430,10 @@
     font-size: 10px;
 
   }
+  .ques_check svg {
+    max-width: 10px;
+    max-height: 10px;
+    min-height: 10px;
+    min-width: 10px;
+  }
 }
