--- a/src/components/how-does-it-work/work.module.css
+++ b/src/components/how-does-it-work/work.module.css
@@ -29,6 +29,14 @@
   margin-left: 15px;
   margin-right: 15px;
 }
+.boxs_mob {
+  width: 100%;
+  display:none;
+  grid-template-columns: 311px;
+  justify-content: center;
+  gap: 32px;
+  margin-bottom: 33px;
+}
 .box {
   height: 448px;
   border-radius: 8px;
@@ -41,6 +49,53 @@
   gap: 32px;
   flex: 1 0 0;
   position: relative;
+}
+.boxs_mob .box {
+  border-radius: 8px;
+  border: 1px solid #141414;
+  background: #fff;
+  max-width: 311px;
+  max-height: 156px;
+  flex-direction: column;
+  gap: 16px;
+}
+.boxs_mob .box .box_body {
+  font-size: 14px;
+  line-height: 16.94px;
+  text-align: start;
+  max-width: 165px;
+}
+.boxs_mob .box svg {
+  width: 80px;
+  height: 80px;
+}
+.bx_data {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.boxs_mob .box .box_header {
+  font-size: 15px;
+  margin-top: 20px;
+  line-height: 19.36px;
+  max-width: none;
+}
+.boxs_mob .box .num {
+  max-height: 33px;
+  max-width: 33px;
+}
+.boxs_mob .box .num span {
+  line-height: 19.36px;
+  font-size: 16px;
+}
+.nm {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 0;
 }
 .box_header {
   margin-top: 50px;
@@ -220,7 +275,6 @@
   display: none;
   flex-direction: column;
   justify-content: flex-end;
-
 }
 .phone_mobile > div {
   height: 50%;
@@ -260,8 +314,11 @@
   .boxs {
     display: none;
   }
+  .boxs_mob {
+    display: grid;
+  }
   .box {
-    flex-direction:inherit;
+    flex-direction: inherit;
   }
   .header {
     font-size: 24px;
@@ -278,7 +335,7 @@
     height: 24px;
   }
 }
-@media screen and (max-width: 670px){
+@media screen and (max-width: 670px) {
   .phone {
     display: none;
   }
