--- a/src/pages/terms/terms.module.css
+++ b/src/pages/terms/terms.module.css
@@ -64,3 +64,80 @@
   margin-bottom: 16px;
   margin-top: 0px;
 }
+.d {
+  margin-top: 153px
+}
+@media screen and (max-width: 900px) {
+  .info {
+    margin-left: 20px;
+    margin-right: 20px;
+    width: auto;
+  }
+  .data {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    gap: 0px;
+  }
+  .data img {
+    width: 120px;
+    height: 120px;
+    margin: 0;
+  }
+  .header {
+    height: 424px;
+    background-image: url(../../images/trm.png);
+  }
+
+  .data p {
+    margin: 0;
+    font-size: 36px;
+    text-align: center;
+  }
+  .head {
+    font-size: 14px;
+    text-align: center;
+    margin-left: 36px;
+    margin-right: 36px;
+  }
+  .texts p {
+    max-width: 260.6px;
+    line-height: normal;
+  }
+  .text {
+    max-width: 313.8px;
+    text-align: center;
+  }
+  .d {
+    margin-top: 0;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .d p {
+    max-width: 291.6px;
+    line-height: normal;
+  }
+  .d .info {
+    margin-top: 16px;
+    text-align: center;
+  }
+  .texts_ p{
+    max-width: none;
+  }
+  .texts_ {
+    width: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .pick {
+    font-size: 24px;
+    margin-bottom: 48px;
+  }
+  .page {
+    margin-top: 32px;
+  }
+}
